Fixed the Navbar to be sticky top, made the pull down menu, and added scss to the navbar to avoid overlap in phone view

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,3 +10,8 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
+
+// Global layout fixes (sticky navbar)
+body {
+  padding-top: 72px;
+}
